@@ -7,6 +7,7 @@ Revision history for Perl extension Bundle::Theory.
         Net::FTPServer.
       - Removed IO::Socket::SSL for now, since its tests fail.
       - Added Want.
+      - Added Parse::RecDescent.
 
 1.02  2008-02-05 00:07:25
       - Added `t/basic.t` so that it would actually be distributed. Duh.
